# outcome-logic-coq

./: .gitignore  CoqMakefile  CoqMakefile.conf  README.md  _CoqProject  dune-project  ol-coq.opam
blog/final/: blog.md
blog/progress/: blog.md
examples/: malloc.v
theories/: assertion.v  computation.v  lemmas.v  metatheory.v  ol.v  rules.v  semantics.v  set.v  soundness.v  state.v  syntax.v  theorems.v  util.v  vec.v
